--- a/index.html
+++ b/index.html
@@ -243,7 +243,22 @@
             extractButton.disabled = true;
         });
 
-        // Extract Data from Image
+        // Add better debug info
+        function addDebugInfo(message) {
+            console.log(message);
+            const debugElement = document.createElement('div');
+            debugElement.className = 'status info';
+            debugElement.style.marginTop = '10px';
+            debugElement.textContent = message;
+            uploadStatus.after(debugElement);
+
+            // Remove after 10 seconds
+            setTimeout(() => {
+                debugElement.remove();
+            }, 10000);
+        }
+
+        // Extract Button Click
         extractButton.addEventListener('click', async () => {
             const file = imageFileInput.files[0];
             if (!file) {
@@ -257,6 +272,7 @@
             try {
                 // Convert image to base64
                 const base64Image = await fileToBase64(file);
+                addDebugInfo(`Image converted to base64 (${Math.round(base64Image.length / 1024)}KB)`);
 
                 // Get API key from localStorage
                 const apiKey = localStorage.getItem('anthropicApiKey');
@@ -267,7 +283,9 @@
                 }
 
                 // Call Anthropic API
+                addDebugInfo('Calling Anthropic API...');
                 const csvData = await callAnthropicAPI(apiKey, base64Image, file.type);
+                addDebugInfo('API call successful! Processing data...');
 
                 // Process and display the CSV data
                 processCSVData(csvData);
@@ -315,58 +333,99 @@
         }
 
         async function callAnthropicAPI(apiKey, base64Image, mimeType) {
-            const response = await fetch('https://api.anthropic.com/v1/messages', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'x-api-key': apiKey,
-                    'anthropic-version': '2023-06-01'
-                },
-                body: JSON.stringify({
-                    model: "claude-3-7-sonnet-20250219",
-                    max_tokens: 2048,
-                    messages: [
-                        {
-                            role: "user",
-                            content: [
-                                {
-                                    type: "image",
-                                    source: {
-                                        type: "base64",
-                                        media_type: mimeType,
-                                        data: base64Image
-                                    }
-                                },
-                                {
-                                    type: "text",
-                                    text: "Please extract the data from this image and return it in CSV format. Specifically, we care about the names on the left, and all filled values on the right. If a number is missing, please fill it with NA. If a number is unreadable or you're not confident, please fill it with 'UN'. Place the csv data inside here tags like so:\n\nid,name,data1,data2,data3,...\n1,John Doe,123,456,789,...\n2,Jane Smith,234,567,890,...\n...\n"
-                                }
-                            ]
-                        }
-                    ]
-                })
-            });
-
-            if (!response.ok) {
-                const errorData = await response.json();
-                throw new Error(`API error: ${errorData.error?.message || response.statusText}`);
-            }
-
-            const data = await response.json();
-            const content = data.content[0].text;
-
-            // Extract CSV data between the tags
             try {
-                const csvMatch = content.match(/```([\s\S]*?)```/);
-                if (csvMatch && csvMatch[1]) {
-                    return csvMatch[1].trim();
-                } else {
-                    throw new Error('Could not extract CSV data from the response');
+                // Add cors-anywhere proxy to handle CORS issues
+                const useProxy = false; // Set to true if needed for testing
+                const apiUrl = useProxy
+                    ? 'https://cors-anywhere.herokuapp.com/https://api.anthropic.com/v1/messages'
+                    : 'https://api.anthropic.com/v1/messages';
+
+                const response = await fetch(apiUrl, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'x-api-key': apiKey,
+                        'anthropic-version': '2023-06-01'
+                    },
+                    body: JSON.stringify({
+                        model: "claude-3-7-sonnet-20250219",
+                        max_tokens: 2048,
+                        messages: [
+                            {
+                                role: "user",
+                                content: [
+                                    {
+                                        type: "image",
+                                        source: {
+                                            type: "base64",
+                                            media_type: mimeType,
+                                            data: base64Image
+                                        }
+                                    },
+                                    {
+                                        type: "text",
+                                        text: "Please extract the data from this image and return it in CSV format. Specifically, we care about the names on the left, and all filled values on the right. If a number is missing, please fill it with NA. If a number is unreadable or you're not confident, please fill it with 'UN'. Place the csv data inside here tags like so:\n\nid,name,data1,data2,data3,...\n1,John Doe,123,456,789,...\n2,Jane Smith,234,567,890,...\n...\n"
+                                    }
+                                ]
+                            }
+                        ]
+                    })
+                });
+
+                if (!response.ok) {
+                    const errorText = await response.text();
+                    let errorMessage;
+                    try {
+                        const errorData = JSON.parse(errorText);
+                        errorMessage = errorData.error?.message || response.statusText;
+                    } catch (e) {
+                        errorMessage = errorText || response.statusText;
+                    }
+                    console.error('API Error:', errorMessage);
+                    throw new Error(`API error (${response.status}): ${errorMessage}`);
+                }
+
+                const data = await response.json();
+                const content = data.content[0].text;
+
+                // Log the full response for debugging
+                console.log('Full API response:', content);
+
+                // Extract CSV data between the tags
+                try {
+                    // Try to find data between triple backticks first
+                    let csvMatch = content.match(/```([\s\S]*?)```/);
+
+                    // If not found, try between custom tags
+                    if (!csvMatch) {
+                        csvMatch = content.match(/<here>([\s\S]*?)<\/here>/i);
+                    }
+
+                    // If still not found, look for CSV-like patterns
+                    if (!csvMatch && content.includes(',') && /\w+,\w+/.test(content)) {
+                        // Try to extract lines that look like CSV format
+                        const lines = content.split('\n').filter(line =>
+                            line.includes(',') && !line.startsWith('```') && !line.startsWith('<')
+                        );
+
+                        if (lines.length > 1) {
+                            return lines.join('\n');
+                        }
+                    }
+
+                    if (csvMatch && csvMatch[1]) {
+                        return csvMatch[1].trim();
+                    } else {
+                        throw new Error('Could not extract CSV data from the response');
+                    }
+                } catch (error) {
+                    console.error('Error parsing response:', error);
+                    console.log('Full response:', content);
+                    throw new Error('Failed to parse the API response');
                 }
             } catch (error) {
-                console.error('Error parsing response:', error);
-                console.log('Full response:', content);
-                throw new Error('Failed to parse the API response');
+                console.error('Error calling API:', error);
+                throw new Error('Failed to call the API');
             }
         }
 
